Footer bottom menu

--- a/src/app/components/home/business/business.component.less
+++ b/src/app/components/home/business/business.component.less
@@ -9,7 +9,7 @@
   flex-flow: column wrap;
   align-items: stretch;
   background: transparent;
-  background: linear-gradient(@b6, @b95), url('../../../../assets/images/buss_hr.jpg');
+  background: linear-gradient(to right, @b6, @b95), url('../../../../assets/images/buss_hr.jpg');
   background-size: cover;
   background-attachment: fixed;
 
@@ -54,7 +54,7 @@
           //color: @d;
           border: none;
           //box-shadow: none;
-          border-radius: 20px;
+          border-radius: 4px;
           background: linear-gradient(transparent 70%, @b);
         }
       }
