--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -24,6 +24,7 @@
       </div>
     </div>
   </div>
-  <app-domestic #domestic></app-domestic>
+  <app-domestic></app-domestic>
   <app-business></app-business>
+  <app-saving></app-saving>
 </div>
