--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -9,36 +9,71 @@
   background: grey;
   background: linear-gradient(@b6, black);
 
-  div:nth-child(1) {
-    flex: 1 1;
+  > div {
     display: flex;
     flex-flow: row wrap;
-    align-content: flex-start;
 
-    ul {
-      justify-content: flex-start;
-      list-style: none;
-      padding: 0;
-      margin: 0;
+    .footer-block {
+      flex: 1 1;
+      display: flex;
+      flex-flow: column wrap;
 
-      li {
+      .footer-block-header {
+        display: flex;
+        justify-content: center;
+        padding: 20px 0 0 0;
         button {
-          text-align: left;
-          margin: 5px;
-          color: silver;
-          padding: 5px;
-          border-bottom: 1px solid silver;
-          border-radius: 0;
-          color: silver !important;
+          font-size: 20px;
         }
+      }
+
+      ul {
+        list-style: none;
+        padding: 0 10px;
+        margin: 0;
+        flex: 1;
+
+        li {
+          display: flex;
+
+          button {
+            flex: 1;
+            margin: 5px;
+            color: silver;
+            padding: 0 5px;
+            border-bottom: 1px solid silver;
+            border-radius: 0;
+            color: silver;
+            text-align: left;
+
+            span {
+              padding-left: 5px;
+              text-align: center;
+            }
+          }
+        }
+      }
+      div {
+        padding: 0;
       }
     }
   }
 
-  div:nth-child(2) {
-    color: silver;
-    text-align: center;
-    padding: 10px;
-    font-size: 10px;
+  .footer-copy {
+    padding-top: 20px;
+    p {
+      color: silver;
+      text-align: center;
+      font-size: 10px;
+      width: 100%;
+    }
+  }
+}
+@media screen and (max-width: 560px) {
+  #footer {
+    > div {
+      flex-direction: column;
+      align-content: stretch;
+    }
   }
 }
