add ankers to start slide buttons

--- a/src/app/components/home/business/business.component.less
+++ b/src/app/components/home/business/business.component.less
@@ -1,7 +1,7 @@
 @b: bisque;
-@b95: rgba(0,0,0, 0.95); //rgba(255, 228, 196, 0.95);
+@b95: rgba(50,50,50, 0.95); //rgba(255, 228, 196, 0.95);
 @b7: rgba(0,0,0, 0.7); //rgba(255, 228, 196, 0.7);
-@b6: rgba(0,0,0, 0.6); //rgba(255, 228, 196, 0.6);
+@b6: rgba(50,50,50, 0.6); //rgba(255, 228, 196, 0.6);
 @d: #403a32;
 
 .business {
@@ -38,7 +38,7 @@
       padding: 20px 10px 50px 10px;
       border-radius: 2px;
       margin-top: 50px;
-
+      border: none;
       h3 {
         margin: 8px 0;
         color: @b;
@@ -66,7 +66,7 @@
   .business {
     div {
       div:nth-child(2) {
-        margin: 0 0 5px 5px;
+        margin: 5px;
         padding: 5px;
       }
     }
