footer socials, svg icons

--- a/src/app/components/home/home.component.less
+++ b/src/app/components/home/home.component.less
@@ -59,7 +59,7 @@
         -webkit-transition: all 1s ease;
         transition: all 1s ease;
         overflow: hidden;
-
+        cursor: pointer;
         img {
           display: block;
           position: absolute;
