--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -37,8 +37,25 @@
           <span style="color:silver">{{ts.run('footer.socials')}}</span>
         </button>
       </div>
-      <ul>
-
+      <ul class="footer-socials">
+        <li>
+            <a href="{{ts.run('footer.youtubeURL')}}" title="Youtube"
+               target="_blank">
+              <mat-icon svgIcon="youtube" style="color: silver"></mat-icon>
+            </a>
+        </li>
+        <li>
+            <a href="{{ts.run('footer.faceURL')}}" title="Facebook"
+               target="_blank">
+              <mat-icon svgIcon="facebook" style="color: silver"></mat-icon>
+            </a>
+        </li>
+        <li>
+            <a href="{{ts.run('footer.linkedURL')}}" title="LinkedIn"
+               target="_blank">
+              <mat-icon svgIcon="linkedin" style="color: silver"></mat-icon>
+            </a>
+        </li>
       </ul>
     </div>
   </div>
