--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -22,6 +22,7 @@
         display: flex;
         justify-content: center;
         padding: 20px 0 0 0;
+
         button {
           font-size: 20px;
         }
@@ -41,7 +42,6 @@
             margin: 5px;
             color: silver;
             padding: 0 5px;
-            border-bottom: 1px solid silver;
             border-radius: 0;
             color: silver;
             text-align: left;
@@ -53,6 +53,22 @@
           }
         }
       }
+
+      .footer-socials {
+        li {
+          a {
+            text-align: center;
+            flex: 1;
+            margin: 5px;
+            color: silver;
+            padding: 5px 5px 0 5px;
+            &:hover {
+              background: rgba(255, 228, 196, 0.1);
+            }
+          }
+        }
+      }
+
       div {
         padding: 0;
       }
@@ -61,6 +77,7 @@
 
   .footer-copy {
     padding-top: 20px;
+
     p {
       color: silver;
       text-align: center;
