--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -54,6 +54,14 @@
         }
       }
 
+      .videos {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .video-items {
+        }
+      }
+
       .footer-socials {
         li {
           a {
