footer buttons/a styles

--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -46,6 +46,10 @@
             color: silver;
             text-align: left;
 
+            &:hover {
+              background: rgba(255, 228, 196, 0.1);
+            }
+
             span {
               padding-left: 5px;
               text-align: center;
@@ -58,11 +62,13 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
         .video-items {
         }
       }
 
       .footer-socials {
+
         li {
           a {
             text-align: center;
@@ -70,6 +76,7 @@
             margin: 5px;
             color: silver;
             padding: 5px 5px 0 5px;
+
             &:hover {
               background: rgba(255, 228, 196, 0.1);
             }
