--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -9,6 +9,7 @@ header {
     position: absolute;
     top: 30%;
     left: 20px;
+    color: bisque;
   }
   mat-toolbar {
     background: transparent;
@@ -46,11 +47,13 @@ header {
 
         button {
           font-size: 20px;
+          color: bisque;
         }
       }
 
       .mobile-menu {
         display: none;
+        color: bisque;
       }
     }
   }
