image preloader directive

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,20 +7,20 @@
         <p class="dark-font-color" [@title_2]="animate">{{ts.run('app.title_2')}}</p>
         <p class="dark-font-color"[@title_3]="animate">{{ts.run('app.title_3')}}</p>
       </div>
-      <img src="/assets/images/96.png" alt="wash_girl" />
+      <img preloadImg src="/assets/images/96.png" alt="wash_girl" />
     </div>
     <div class="block">
       <div class="eco-card-transparent-day" (click)="goToAnchor('domestic')">
         <p>{{ts.run('start.card_1')}}</p>
-        <img src="/assets/images/heat.jpg" alt="girl dry hands"/>
+        <img preloadImg src="/assets/images/heat.jpg" alt="girl dry hands"/>
       </div>
       <div class="eco-card-transparent-day" (click)="goToAnchor('business')">
         {{ts.run('start.card_2')}}
-        <img src="/assets/images/buss.jpg" alt="man has food" />
+        <img preloadImg src="/assets/images/buss.jpg" alt="man has food" />
       </div>
       <div class="eco-card-transparent-day" (click)="goToAnchor('saving')">
         {{ts.run('start.card_3')}}
-        <img src="/assets/images/calcmoney.jpg" alt="money calculation" />
+        <img preloadImg src="/assets/images/calcmoney.jpg" alt="money calculation" />
       </div>
     </div>
   </div>
