Gallery component skeleton

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -27,4 +27,5 @@
   <app-domestic id="domestic"></app-domestic>
   <app-business id="business"></app-business>
   <app-saving id="saving"></app-saving>
+  <app-gallery id="gallery"></app-gallery>
 </div>
